--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 @import './setup/vars.css';
 
 /* Basic */
-@import './basic.base.css';
+@import './basic/base.css';
 @import './basic/helpers.css';
 @import './basic/layout.css';
 
@@ -11,388 +11,26 @@
 @import './cmps/header.css';
 @import './cmps/gallery.css';
 @import './cmps/editor.css';
-@import './cmps/footer.css';
-/* layout */
 
 /* .keys {
     cursor: pointer;
     margin-left: 20px;
 } */
 
-.add-img {
+/* .add-img {
     width: 80px;
     background: rgb(47, 0, 255);
     color: rgb(255, 255, 255);
     border: 2px solid black;
     animation: doAdd 0.7s;
     animation-iteration-count: infinite;
-}
+} */
 
-@keyframes doAdd {
+/* @keyframes doAdd {
     from {
         border: 2px solid rgb(255, 255, 255);
     }
     to {
         border: 2px solid rgba(238, 101, 101, 0.726);
     }
-}
-
-.upload {
-    width: 80px;
-    grid-column: 4/5;
-}
-
-.imgs-container {
-    width: 90vw;
-    margin: 0 auto 25px;
-    flex-wrap: wrap;
-    gap: 0.3rem;
-}
-
-.galery-img {
-    cursor: pointer;
-    height: 200px;
-    border-radius: 1rem;
-    opacity: .8;
-}
-
-.galery-img:hover {
-    opacity: 1;
-}
-
-.canvas-container {
-    width: 35vw;
-}
-
-.editor-container {
-    width: 85vw;
-    margin: 0 auto 20px;
-    gap: 3.5rem;
-}
-
-.canvas {
-    border: 0.45rem solid rgb(49, 44, 44);
-    border-radius: 2rem;
-}
-
-.editor {
-    background-color: #555454;
-    flex-direction: column;
-    border-radius: 2rem;
-    padding: 1.5rem 0;
-    gap: 1.5rem;
-}
-
-.text-line {
-    padding-left: 10px;
-    height: 2.5rem;
-    width: 17rem;
-    display: block;
-    border-radius: 0.8rem;
-}
-
-.buttons-line-1 .btn:nth-child(1) {
-    background-color: rgb(86, 228, 86);
-}
-
-.buttons-line-1 .btn:nth-child(2) {
-    background-color: #fa5454;
-}
-
-.buttons-line-1 .btn:nth-child(3),
-.buttons-line-1 .btn:nth-child(4),
-.buttons-line-1 .btn:nth-child(5) {
-    background-color: #85baf7;
-}
-
-.buttons-line-2 {
-    padding: 0.7rem;
-    width: 70%;
-    flex-wrap: wrap;
-    background-color: rgb(35, 157, 197);
-    border-radius: 1rem;
-}
-
-.buttons-line-2 .btn:nth-child(5) {
-    justify-self: center;
-}
-
-.btn {
-    margin: 5px;
-    border: 0;
-    border-radius: 0.5rem;
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.5);
-    position: relative;
-}
-
-.color-input {
-    position: absolute;
-    bottom: 200px;
-}
-
-.btn:hover::after {
-    content: attr(data-title);
-    position: absolute;
-    font-size: 12px;
-    top: -110%;
-    left: 0%;
-    background: rgb(201, 222, 243);
-    border: 1px solid gray;
-    border-radius: 0.5rem;
-    padding: 0.2rem;
-    z-index: 1;
-}
-
-.icon {
-    width: 1.56rem;
-    height: 1.8rem;
-}
-
-.stickers {
-    background-color: rgba(162, 167, 180, 0.644);
-    border-radius: 15px;
-    padding: 10px 20px;
-}
-
-.stickers img {
-    z-index: 10;
-    width: 60px;
-}
-
-.sticker {
-    cursor: pointer;
-}
-
-.load-meme {
-    gap: 5px;
-}
-
-.load {
-    border: 0;
-    height: 2rem;
-    border-radius: 0.4rem;
-    font-size: 1.2rem;
-    color: #FFFFFF;
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.5);
-}
-
-.save {
-    background-color: #1E7CD3;
-    width: 4.5rem;
-}
-
-.download {
-    background-color: #8F44BB;
-    width: 7rem;
-}
-
-.publish {
-    background-color: #14d40db4;
-    width: 4.5rem;
-}
-
-.share {
-    background-color: #000000f8;
-    padding: 6px 6px;
-}
-
-.share-container {
-    display: inline-block;
-}
-
-footer {
-    border-top: 2px solid rgba(255, 255, 255, 0.527);
-    height: 45px;
-    background-color: rgb(90, 108, 114);
-    font-size: 1.6rem;
-    text-align: center;
-    padding: 0.3rem;
-    z-index: -1;
-}
-
-.hide {
-    display: none;
-}
-
-@media(max-width:1125px) {
-    .galery-img {
-        height: 180px;
-    }
-}
-
-@media(max-width:1020px) {
-    .galery-img {
-        height: 200px;
-    }
-}
-
-@media(max-width:930px) {
-    .search-img {
-        grid-template-rows: 1fr 1fr;
-    }
-    .search-cell {
-        grid-column: 1/-1;
-    }
-    .upload {
-        grid-row: 2/3;
-        grid-column: 1/2;
-    }
-    .searched-show {
-        grid-row: 2/3;
-        grid-column: 2/-2;
-    }
-    .more {
-        grid-row: 2/3;
-        grid-column: -2/-1;
-    }
-}
-
-@media(max-width:910px) {
-    .galery-img {
-        height: 180px;
-    }
-    .nav-bar {
-        gap: 0px
-    }
-    .nav-bar li:not(:last-child) {
-        padding: 5px 0.5rem
-    }
-    .leng {
-        padding: 0.4rem 0.4rem;
-    }
-}
-
-@media(max-width:815px) {
-    .galery-img {
-        height: 160px;
-    }
-}
-
-@media(max-width:735px) {
-    .galery-img {
-        height: 140px;
-    }
-    body.menu-open .logo {
-        opacity: 0.6;
-        cursor: auto;
-        pointer-events: none;
-    }
-    header {
-        border-radius: unset;
-    }
-    header .btn-menu {
-        display: inline;
-    }
-    body.menu-open .nav-bar {
-        transform: translateX(0);
-        transition: transform 1s;
-    }
-    body.menu-open .btn-gallery {
-        position: relative;
-        z-index: -1;
-    }
-    .nav-bar {
-        flex-direction: column;
-        position: fixed;
-        height: 100vh;
-        width: 50%;
-        top: 0;
-        right: 0;
-        background-color: rgb(73, 72, 72);
-        transform: translateX(100%);
-        transition: transform 1s;
-        padding: 0;
-        margin: 0;
-        gap: 30px
-    }
-    .nav-bar li {
-        width: 100%;
-        padding: 20px;
-        border-bottom: 1px solid rgb(54, 54, 54);
-    }
-    .nav-bar li:first-child {
-        margin-top: 30px;
-    }
-    .nav-bar li:last-child {
-        padding: 0;
-    }
-    .search-img {
-        grid-template-rows: repeat(3, 1fr);
-    }
-    .upload,
-    .add-img {
-        width: 100%;
-        grid-row: 3/4;
-        grid-column: 1/6;
-    }
-    .searched-show {
-        grid-row: 2/3;
-        grid-column: 1/-1;
-    }
-    .more {
-        width: 100%;
-        grid-row: 3/4;
-        grid-column: 6/-1;
-    }
-    .editor-container {
-        flex-direction: column;
-        gap: 1rem;
-        align-items: center;
-        width: 100%;
-    }
-    .editor {
-        padding: 0;
-        gap: 1rem;
-        background-color: unset;
-    }
-    .canvas-container {
-        min-height: 300px;
-        min-width: 300px;
-    }
-    footer {
-        font-size: 1rem;
-        height: 25px;
-    }
-}
-
-@media (max-width: 700px) {
-    .galery-img {
-        height: 140px;
-    }
-}
-
-@media(max-width:640px) {
-    .galery-img {
-        height: 120px;
-    }
-}
-
-@media(max-width:550px) {
-    .galery-img {
-        height: 150px;
-    }
-}
-
-@media(max-width:510px) {
-    .galery-img {
-        height: 210px;
-    }
-}
-
-@media(max-width:472px) {
-    .galery-img {
-        height: 190px;
-    }
-    .search-img {
-        grid-template-rows: 1fr 2fr 1fr;
-    }
-}
-
-@media(max-width:430px) {
-    .galery-img {
-        height: 170px;
-    }
-    .searched-show {
-        height: 77px;
-    }
-}
+} */
