--- a/css/cmps/gallery.css
+++ b/css/cmps/gallery.css
@@ -2,6 +2,17 @@
     flex-direction: column;
 }
 
+.gallery-img {
+    cursor: pointer;
+    height: 200px;
+    border-radius: 1rem;
+    opacity: .8;
+}
+
+.gallery-img:hover {
+    opacity: 1;
+}
+
 .search-img {
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: 1fr;
@@ -10,7 +21,7 @@
     margin-bottom: 1rem;
 }
 
-.search-cell {
+.search-bar {
     grid-column: 1/4;
     position: relative;
 }
@@ -34,7 +45,7 @@
     bottom: 3px;
 }
 
-.searched-show {
+.searched {
     flex-wrap: wrap;
     text-align: center;
     font-weight: bold;
@@ -59,4 +70,109 @@
 .more {
     grid-column: -1/-2;
     width: 80px;
+}
+
+.upload {
+    width: 80px;
+    grid-column: 4/5;
+}
+
+.imgs-container {
+    width: 90vw;
+    margin: 0 auto 25px;
+    flex-wrap: wrap;
+    gap: 0.3rem;
+}
+
+@media(max-width:930px) {
+    .search-img {
+        grid-template-rows: 1fr 1fr;
+    }
+    .search-bar {
+        grid-column: 1/-1;
+    }
+    .upload {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+    .searched {
+        grid-row: 2/3;
+        grid-column: 2/-2;
+    }
+    .more {
+        grid-row: 2/3;
+        grid-column: -2/-1;
+    }
+}
+
+@media(max-width:1125px) {
+    .gallery-img {
+        height: 180px;
+    }
+}
+
+@media(max-width:1020px) {
+    .gallery-img {
+        height: 200px;
+    }
+}
+
+@media(max-width:910px) {
+    .gallery-img {
+        height: 180px;
+    }
+    .nav-bar {
+        gap: 0px
+    }
+    .nav-bar li:not(:last-child) {
+        padding: 5px 0.5rem
+    }
+}
+
+@media(max-width:815px) {
+    .gallery-img {
+        height: 160px;
+    }
+}
+
+@media (max-width: 700px) {
+    .gallery-img {
+        height: 140px;
+    }
+}
+
+@media(max-width:640px) {
+    .gallery-img {
+        height: 120px;
+    }
+}
+
+@media(max-width:550px) {
+    .gallery-img {
+        height: 150px;
+    }
+}
+
+@media(max-width:510px) {
+    .gallery-img {
+        height: 210px;
+    }
+}
+
+@media(max-width:472px) {
+    .gallery-img {
+        height: 190px;
+    }
+    .search-img {
+        grid-template-rows: 1fr 2fr 1fr;
+    }
+}
+
+@media(max-width:430px) {
+    .gallery-img {
+        height: 170px;
+    }
+    .searched {
+        height: 77px;
+    }
 }
