--- a/js/css/basic/base.css
+++ b/js/css/basic/base.css
@@ -5,6 +5,7 @@
 body {
     margin: 3px;
     background-color: #3e4b68f3;
+    /* background-image: url('/img/backGround.png'); */
     background-repeat: no-repeat;
     background-size: cover;
     font-family: poppins;
